ecs-env/sg.yml
---
AWSTemplateFormatVersion: 2010-09-09

Parameters:
    Albsg:
        Type: String
    
    VpcID:
        Type: String
    Env:
      Type: String


Resources:
    wahajwebserver:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupName: !Sub "wahaj-webserver-{$Env}"
          SecurityGroupIngress:
            - IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: 0.0.0.0/0
            - IpProtocol: tcp
              FromPort: 0
              ToPort: 0
              SourceSecurityGroupId: !Ref Albsg
              Description: For traffic from Internet
          GroupDescription: Security Group for demo server
          VpcId: !Ref VpcID
    dbsg:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: !Sub "dbsg-{$Env}"
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 3306
                  ToPort: 3306
                  SourceSecurityGroupId: !Ref wahajwebserver
                  Description: For traffic from Internet
            GroupDescription: Security Group for demo server
            VpcId: !Ref VpcID

Outputs:
  dbsg:
    Description: security group of wahajwebserver
    Value: !Ref dbsg
    Export:
        Name: "dbsg"
  wahajwebserver:
    Description: security group of wahajwebserver
    Value: !Ref wahajwebserver
    Export:
        Name: !Sub "${AWS::StackName}-wahajwebserver"
